Fixed safari z-index #5

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,7 +4,6 @@
 }
 
 body {
-  position: absolute;
   font-family: ubuntu;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,6 +11,7 @@ body {
   -webkit-overflow-scrolling: auto !important;
   -webkit-background-size: auto;
   background-size: auto;
+  overflow-x: hidden;
 }
 
 * {    
